extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#ÅäÖÃGitHubµÄµÇÂ¼ÊôĞÔÖµ
+github.client.id=3e8080adb3844c967d29
+github.client.secret=5545c4c8221d0d1d07494a9c35d4ff170d69e200
+github.redirect.uri=http://localhost:8080/callback
