--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!--引入okhttp-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.8.0</version>
+        </dependency>
+
+        <!--引入fastJson进行json字符串处理-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.72</version>
+        </dependency>
     </dependencies>
 
     <build>
