--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@
 github.client.id=3e8080adb3844c967d29
 github.client.secret=5545c4c8221d0d1d07494a9c35d4ff170d69e200
 github.redirect.uri=http://localhost:8080/callback
+
+#数据库连接池配置信息
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useSSL=true
+spring.datasource.username=root
+spring.datasource.password=Aa847675565
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
